--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to Pillarjs on OpenShift</title>
+  <title>Welcome to NodeJS on OpenShift</title>
 
   <link href='/css/site.css' rel='stylesheet' type='text/css' />
 </head>
@@ -11,7 +11,7 @@
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Pillarjs application on OpenShift</h1>
+            <h1>Welcome to your NodeJS application on OpenShift</h1>
           </hgroup>
 
 	  <p>Learn more about pillarjs here: <a href="https://pillarjs.github.io/">pillarjs.github.io</a></p>
